--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/style.css">
-    <link href="/assets/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/dist/output.css">
 </head>
 <body>
     <!-- Landing Section -->
