--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles/style.css">
-    <link rel="stylesheet" href="/assets/dist/output.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="assets/dist/output.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <!-- Landing Section -->
@@ -76,13 +77,13 @@
         <!-- Search Section -->
         <section class="overflow-hidden">
             <div class="search">
-                <img class="search__bg search__bg--right" src="/assets/images/map.svg" alt="map image">
-                <img class="search__bg search__bg--left" src="/assets/images/map.svg" alt="map image">
+                <img class="search__bg search__bg--right" src="assets/images/map.svg" alt="map image">
+                <img class="search__bg search__bg--left" src="assets/images/map.svg" alt="map image">
                 <div class="search__item">
                     <h1 class="search__title">We are in almost all parts of the world</h1>
                     <p class="search__p">So don't worry, you can use our service wherever you are</p>
                     <form class="search__search">
-                        <img src="/assets/images/icon/search.svg" alt="search icon">
+                        <img src="assets/images/icon/search.svg" alt="search icon">
                         <input class="search__search__input" type="text" placeholder="London, United Kingdom">
                     </form>
                 </div>
@@ -100,10 +101,10 @@
                 <!-- Single Apartment -->
                 <article class="apartment__item apartment__item--start">
                     <div class="card">
-                        <div class="card__img" style="background-image: url(/assets/images/mp1.png);">
+                        <div class="card__img" style="background-image: url(assets/images/mp1.png);">
                             <div class="evaluation">
                                 <span class="evaluation__item">4.6</span>
-                                <img src="/assets/images/icon/star.svg" alt="star icon">
+                                <img src="assets/images/icon/star.svg" alt="star icon">
                             </div>
                         </div>
                         <div class="card__footer">
@@ -117,10 +118,10 @@
                 <!-- Single Apartment -->
                 <article class="apartment__item apartment__item--center">
                     <div class="card card--center">
-                        <div class="card__img card__img--center" style="background-image: url(/assets/images/mp2.png);">
+                        <div class="card__img card__img--center" style="background-image: url(assets/images/mp2.png);">
                             <div class="evaluation evaluation--center">
                                 <span class="evaluation__item--center">4.8</span>
-                                <img src="/assets/images/icon/star.svg" alt="star icon">
+                                <img src="assets/images/icon/star.svg" alt="star icon">
                             </div>
                         </div>
                         <div class="card__footer--center">
@@ -134,10 +135,10 @@
                 <!-- Single Apartment -->
                 <article class="apartment__item apartment__item--end">
                     <div class="card">
-                        <div class="card__img" style="background-image: url(/assets/images/mp3.png);">
+                        <div class="card__img" style="background-image: url(assets/images/mp3.png);">
                             <div class="evaluation">
                                 <span class="evaluation__item">4.4</span>
-                                <img src="/assets/images/icon/star.svg" alt="star icon">
+                                <img src="assets/images/icon/star.svg" alt="star icon">
                             </div>
                         </div>
                         <div class="card__footer">
@@ -190,7 +191,7 @@
                 <article class="service__item service__item--center">
                     <div class="service__box service__box--center">
                         <div class="service__icon">
-                            <img src="/assets/images/icon/ticket-discount.svg" alt="discount icon">  
+                            <img src="assets/images/icon/ticket-discount.svg" alt="discount icon">  
                         </div>
                         <div class="service__title">
                             <h3>Lots of discounts</h3>
@@ -208,7 +209,7 @@
                 <article class="service__item service__item--end">
                     <div class="service__box">
                         <div class="service__icon">
-                            <img src="/assets/images/icon/shield-tick.svg" alt="tick icon">  
+                            <img src="assets/images/icon/shield-tick.svg" alt="tick icon">  
                         </div>
                         <div class="service__title">
                             <h3>Guaranteed Service</h3>
@@ -235,14 +236,14 @@
             </header>
             <div class="about__item">
                 <div class="relative">
-                    <img class="absolute lg:z-0 -z-20" src="/assets/images/Vector-left.svg" alt="">
-                    <img class="about__img top-[184px] right-[58%] lg:z-10 -z-10" src="/assets/images/person4.png" alt="">
-                    <img class="about__img -top-[75px] left-[164px] lg:z-0 -z-10" src="/assets/images/person5.png" alt="">
-                    <img class="about__img top-[113px] left-7 lg:z-0 -z-10" src="/assets/images/person6.png" alt="">
+                    <img class="absolute lg:z-0 -z-20" src="assets/images/Vector-left.svg" alt="">
+                    <img class="about__img top-[184px] right-[58%] lg:z-10 -z-10" src="assets/images/person4.png" alt="">
+                    <img class="about__img -top-[75px] left-[164px] lg:z-0 -z-10" src="assets/images/person5.png" alt="">
+                    <img class="about__img top-[113px] left-7 lg:z-0 -z-10" src="assets/images/person6.png" alt="">
                 </div>
                 <div>
                     <article class="box">
-                        <img class="box__icon_favorite" src="/assets/images/icon/message-favorite.svg" alt="message-favorite icon">
+                        <img class="box__icon_favorite" src="assets/images/icon/message-favorite.svg" alt="message-favorite icon">
                         <div class="box__item">
                             <p>I get the best service everywhere 
                                 I go. Vind makes it easy for me to 
@@ -251,10 +252,10 @@
                     </article>
                 </div>
                 <div class="relative">
-                    <img class="absolute about__img--right lg:z-0 -z-20" src="/assets/images/Vector-right.svg" alt="">
-                    <img class="about__img -right-5 -bottom-6 lg:z-0 -z-10" src="/assets/images/person1.png" alt="">
-                    <img class="about__img right-0 bottom-22 lg:z-0 -z-10" src="/assets/images/person2.png" alt="">
-                    <img class="about__img right-[18%] bottom-0 lg:z-0 -z-10" src="/assets/images/person3.png" alt="">
+                    <img class="absolute about__img--right lg:z-0 -z-20" src="assets/images/Vector-right.svg" alt="">
+                    <img class="about__img -right-5 -bottom-6 lg:z-0 -z-10" src="assets/images/person1.png" alt="">
+                    <img class="about__img right-0 bottom-22 lg:z-0 -z-10" src="assets/images/person2.png" alt="">
+                    <img class="about__img right-[18%] bottom-0 lg:z-0 -z-10" src="assets/images/person3.png" alt="">
                 </div>
             </div>
         </section>
@@ -262,7 +263,7 @@
         <section class="down">
             <div class="flex md:flex-row flex-col">
                 <div class="down__img">
-                    <img src="/assets/images/iphon.png" alt="iphon image">
+                    <img src="assets/images/iphon.png" alt="iphon image">
                 </div>
                 <div class="down__title">
                     <h1>Download our apps</h1>
@@ -270,14 +271,14 @@
                         the palm of your hand</p>
                     <div class="down__btn">
                         <button class="btn-outline">
-                            <img src="/assets/images/icon/google_play.svg" alt="">
+                            <img src="assets/images/icon/google_play.svg" alt="">
                             <div class="flex justify-start flex-col ml-[16.4px]">
                                 <span class="text-[11.51px] text-left">Get it on</span>
                                 <h6 class="text-lg font-medium">Google Play</h6>
                             </div>
                         </button>
                         <button class="btn-outline">
-                            <img src="/assets/images/icon/apple.svg" alt="">
+                            <img src="assets/images/icon/apple.svg" alt="">
                             <div class="flex justify-start flex-col">
                                 <span class="text-[11.51px] text-left">Get it on</span>
                                 <h6 class="text-lg font-medium">App Store</h6>
@@ -295,8 +296,8 @@
                     <p class="text-base sm:w-[176px] mt-[9px] leading-7">Main Building, Bandung
                         West Java, Indonesia </p>
                     <div class="flex items-center sm:justify-start justify-center gap-[15px] mt-[17px]">
-                        <img src="/assets/images/icon/insta.svg" alt="instagram icon">
-                        <img src="/assets/images/icon/twitter.svg" alt="twitter icon">
+                        <img src="assets/images/icon/insta.svg" alt="instagram icon">
+                        <img src="assets/images/icon/twitter.svg" alt="twitter icon">
                     </div>
                 </div>
                 <div class="sm:flex hidden gap-[99px] pt-16">
@@ -325,7 +326,7 @@
 
 
 
-    <script src="/assets/scripts/jquery.min.js"></script>
+    <script src="assets/scripts/jquery.min.js"></script>
     <script>
         $(document).ready(() => {
             $('#hamburger').click(() => {
