--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ahlam Mohammed">
+    <meta name="keywords" content="Landing">
+    <meta name="description" content="Landing Page">
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="assets/dist/output.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Landing Page</title>
 </head>
 <body>
     <!-- Landing Section -->
@@ -260,6 +263,7 @@
             </div>
         </section>
 
+        <!-- Download our apps Section -->
         <section class="down">
             <div class="flex md:flex-row flex-col">
                 <div class="down__img">
@@ -289,6 +293,7 @@
             </div>
         </section>
 
+        <!-- Footer Section -->
         <footer>
             <div class="footer">
                 <div class="pt-16 sm:text-left text-center">
@@ -321,10 +326,6 @@
         </footer>
         
     </div>
-
-    
-
-
 
     <script src="assets/scripts/jquery.min.js"></script>
     <script>
