--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
             </header>
             <div class="about__item">
                 <div class="relative">
-                    <img class="absolute lg:z-0 -z-20" src="assets/images/Vector-left.svg" alt="">
-                    <img class="about__img top-[184px] right-[58%] lg:z-10 -z-10" src="assets/images/person4.png" alt="">
-                    <img class="about__img -top-[75px] left-[164px] lg:z-0 -z-10" src="assets/images/person5.png" alt="">
-                    <img class="about__img top-[113px] left-7 lg:z-0 -z-10" src="assets/images/person6.png" alt="">
+                    <img class="absolute lg:z-0 -z-20" src="assets/images/Vector-left.svg" alt="Vector-left background">
+                    <img class="about__img top-[184px] right-[58%] lg:z-10 -z-10" src="assets/images/person4.png" alt="person image">
+                    <img class="about__img -top-[75px] left-[164px] lg:z-0 -z-10" src="assets/images/person5.png" alt="person image">
+                    <img class="about__img top-[113px] left-7 lg:z-0 -z-10" src="assets/images/person6.png" alt="person image">
                 </div>
                 <div>
                     <article class="box">
@@ -255,10 +255,10 @@
                     </article>
                 </div>
                 <div class="relative">
-                    <img class="absolute about__img--right lg:z-0 -z-20" src="assets/images/Vector-right.svg" alt="">
-                    <img class="about__img -right-5 -bottom-6 lg:z-0 -z-10" src="assets/images/person1.png" alt="">
-                    <img class="about__img right-0 bottom-22 lg:z-0 -z-10" src="assets/images/person2.png" alt="">
-                    <img class="about__img right-[18%] bottom-0 lg:z-0 -z-10" src="assets/images/person3.png" alt="">
+                    <img class="absolute about__img--right lg:z-0 -z-20" src="assets/images/Vector-right.svg" alt="Vector-left background">
+                    <img class="about__img -right-5 -bottom-6 lg:z-0 -z-10" src="assets/images/person1.png" alt="person image">
+                    <img class="about__img right-0 bottom-22 lg:z-0 -z-10" src="assets/images/person2.png" alt="person image">
+                    <img class="about__img right-[18%] bottom-0 lg:z-0 -z-10" src="assets/images/person3.png" alt="person image">
                 </div>
             </div>
         </section>
@@ -275,14 +275,14 @@
                         the palm of your hand</p>
                     <div class="down__btn">
                         <button class="btn-outline">
-                            <img src="assets/images/icon/google_play.svg" alt="">
+                            <img src="assets/images/icon/google_play.svg" alt="google_play icon">
                             <div class="flex justify-start flex-col ml-[16.4px]">
                                 <span class="text-[11.51px] text-left">Get it on</span>
                                 <h6 class="text-lg font-medium">Google Play</h6>
                             </div>
                         </button>
                         <button class="btn-outline">
-                            <img src="assets/images/icon/apple.svg" alt="">
+                            <img src="assets/images/icon/apple.svg" alt="apple icon">
                             <div class="flex justify-start flex-col">
                                 <span class="text-[11.51px] text-left">Get it on</span>
                                 <h6 class="text-lg font-medium">App Store</h6>
